--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <!-- Content section -->
   <div class="content">
+     <h2>Angie Ruiz</h2>
+  <p>Student at Riverdale High School</p>
+</div>
 
   </div>
       </main>
