--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
   <div class="content">
      <h2>Angie Ruiz</h2>
   <p>Student at Riverdale High School</p>
+  <div id="interests">
+
+</div>
+ <ul>
+      <li>Football or soccer</li>
+      <li>Neurology</li>
+      <li>Roblox</li>
+    </ul>
+  </div>
+</div>
 </div>
 
   </div>
