--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html>
   <head>
     <title>angie's web</title>
+  <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-
+<h1>angie's web</h1>
+<ul id="nav-ul">
+    <li class="nav-li">
+      <a href="index.html">Home</a>
+    </li>
+    <li class="nav-li">
+      <a href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
       </nav>
 
       <main>
       <!-- Sidebar section -->
   <div class="sidebar">
-
+    <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVyyUcwelJmoX9Y7ZJtIVMYKfh1ZpdXArMIw&s">
   </div>
 
   <!-- Content section -->
@@ -22,10 +31,10 @@
      <h2>Angie Ruiz</h2>
   <p>Student at Riverdale High School</p>
   <div id="interests">
-
-</div>
+<h3>Interests</h3>
+    <ul>
  <ul>
-      <li>Football or soccer</li>
+      <li>Soccer</li>
       <li>Neurology</li>
       <li>Roblox</li>
     </ul>
