--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -7,21 +7,24 @@
 	<script src="jquery.min.js"></script>
 	<style>
 		.box {
-			width: 70px;
-			height: 70px;
-			background-color: teal;
-			font-size: 300%;
-			text-align: center;
-			user-select: none;
-			display: block;
-			position: absolute;
-			top: 100px;
-			/* Change me! */
-			left: 0px;
+			width: 70px; 
+		    height: 70px; 
+		    background-color: rgb(232, 151, 219); 	
+			font-size: 300%; 		
+			text-align: center; 		
+			user-select: none; 			
+			display: block; 			
+			position: absolute; 			
+			top: 100px; 			
+			/* Change me! */ 			
+			left: 0px; 		
 		}
-
 		.board {
 			height: 100vh;
+	          background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTohNVxt-gsCdyE-ueL3S-emurkNAVCXAI8Uw&s");
+              background-size: cover;
+              background-position: center;
+              background-repeat: no-repeat;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -46,8 +49,8 @@
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
-
+			moveBoxTo(500); // Moves the box to the x-position 300
+            moveBoxTo(boardWidth); // Moves the box to the far right edge
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
@@ -66,18 +69,34 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
-
-
+           var positionX = 5;
+		   var points = 1;
+		   var speed = 15;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
 
+		     function update() {
+             positionX += speed;
+            
 
-			};
+			 if (positionX + box.width() >=boardWidth) {
+				positionX = boardWidth - box.width();
+				speed *= -1;
+			}
+           
+			if (positionX <= 0) {
+				positionX = 0;
+                speed *= -1;
+           }
+
+		   moveBoxTo(positionX);
+      }
+
+			// Start update
+          setInterval(update, 50);
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -85,14 +104,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
-
+			points = points + 1;
+			speed= 1 * points + 10;
+            positionX = 0;
+            changeBoxText(points);
 			};
-
-
-
-
-
 		})();
 	</script>
 </body>
